support/crown/tests/ui/unrooted_must_root_return_type.stderr
error: Type must be rooted
 --> $DIR/unrooted_must_root_return_type.rs:8:14
  |
8 | fn foo2() -> Foo {
  |              ^^^
  |
  = note: `#[deny(crown::unrooted_must_root)]` on by default

error: aborting due to previous error

